src/app/tests/snapshots/osp_cli__osp_cli__app__tests__presentation__presentation_messages_compact.snap
---
source: src/osp_cli/app/tests/presentation.rs
assertion_line: 171
expression: "render_message_snapshot(&[(\"ui.presentation\", \"compact\")])"
---
- Errors ---------
- bad

- Warnings -------
- careful
