src/app/tests/snapshots/osp_cli__osp_cli__app__tests__presentation__presentation_messages_expressive.snap
---
source: src/osp_cli/app/tests/presentation.rs
assertion_line: 167
expression: "render_message_snapshot(&[(\"ui.presentation\", \"expressive\")])"
---
- Errors ---------
- bad
------------------

- Warnings -------
- careful
------------------
