src/app/tests/snapshots/osp_cli__osp_cli__app__tests__presentation__presentation_table_expressive.snap
---
source: src/osp_cli/app/tests/presentation.rs
assertion_line: 199
expression: "render_table_snapshot(&[(\"ui.presentation\", \"expressive\")])"
---
╭━━━━━━━┳━━━━━━━╮
┃ uid   ┃ count ┃
┡━━━━━━━╇━━━━━━━┩
│ alice │ 2     │
│ bob   │ 15    │
╰───────┴───────╯
